# pkcore

./: Cargo.toml  DIARY.md  README.md
.github/workflows/: basic.yaml
data/: distinct_shus.csv  hups.db  sample_hups.db
docs/: EPIC-00.md  EPIC-00d_Dimensions.md  EPIC-00e_Dev_Cadence.md  EPIC-00f_Coverage.md  EPIC-02_Calc.md  EPIC-06_Preflop.md  EPIC-07_Transposition.md  EPIC-66_Serialization.md  EPIC-96_The_Answers.md  EPIC-97_Philosophy.md  EPIC-98_Glossary.md  EPIC-999_ramblings.md  EPIC-99_References.md
docs/files/: EPIC-97_Truth.md
docs/hands/DNegsWSOP2022/: 2022-01.md
examples/: all_possible.rs  audit.rs  bcm_csv.rs  bcrepl.rs  bcrepl_old.rs  bitvec.rs  bitwalk.rs  calc.rs  case1.rs  case2.rs  combos.rs  concurrent.rs  csv_bcm.rs  csv_card.rs  deal.rs  distinct.rs  distinct_remaining.rs  dreport.rs  evals_per_class.rs  faceoff.rs  fixed.rs  gaps.rs  generate_all_possible_shu.rs  generate_bcm.rs  generate_distinct_shus.rs  generate_icm.rs  generate_sled.rs  generate_sqlite.rs  generate_sqlite_hupcache.rs  gold_standard.rs  hup.rs  hup_check.rs  hup_ckeck.rs  hup_dump.rs  hup_wash.rs  hups.rs  hups_import.rs  inc.rs  insert.rs  insert_distinct.rs  (+18 more)
examples/retired/: generate_bcm.rs  inc.rs  insert_distinct_rnd.rs  old_pf.rs  rayon.rs  strip.rs  type4.rs
scripts/: hup_dump
src/: bard.rs  card.rs  card_number.rs  cards.rs  deck.rs  lib.rs  poker_card.rs  rank.rs  suit.rs
src/analysis/: case_eval.rs  case_evals.rs  class.rs  eval.rs  evals.rs  hand_rank.rs  mod.rs  name.rs  outs.rs  player_wins.rs  the_nuts.rs
src/analysis/store/: heads_up.rs  mod.rs
src/analysis/store/bcm/: binary_card_map.rs  index_card_map.rs  mod.rs
src/analysis/store/db/: headsup_preflop_result.rs  mod.rs  sqlite.rs
src/analysis/store/nubibus/: EPIC_Pluribus.md  actions.rs  mod.rs  player.rs  pluribus.rs  seat.rs
src/arrays/: Five.rs  five.rs  four.rs  mod.rs  ranges.rs  seven.rs  six.rs  three.rs  two.rs
src/arrays/combos/: hc_symbol.rs  mod.rs  ranges.rs  twos.rs
src/arrays/hole_cards/: twos.rs
src/arrays/matchups/: masked.rs  masks.rs  mod.rs  sorted_heads_up.rs  two_by_2.rs
src/arrays/matchups/masks/: mod.rs  rank_mask.rs  suit_mask.rs  suit_texture.rs
src/casino/: chips.rs  mod.rs
src/casino/cashier/: chips.rs
src/casino/players/: player.rs
src/hand_rank/: case.rs  case_eval.rs  case_evals.rs  class.rs  eval.rs  evals.rs  hand_rank.rs  hand_rank_class.rs  hand_rank_name.rs  mod.rs  name.rs  the_nuts.rs
src/lookups/: flushes.rs  mod.rs  omaha.rs  products.rs  unique5.rs  values.rs
src/play/: action.rs  actions.rs  board.rs  game.rs  hands.rs  hole_cards.rs  mod.rs  phases.rs  position.rs  positions.rs
src/play/stages/: deal_eval.rs  flop.rs  flop_eval.rs  flop_evaluator.rs  mod.rs
src/play/table/: hands.rs
src/util/: csv.rs  data.rs  mod.rs  name.rs  terminal.rs
src/util/wincounter/: heads_up.rs  mod.rs  result.rs  results.rs  win.rs  wins.rs
tests/: heavy_tests.rs
