[package]
name = "pkcore"
version = "0.0.5"
rust-version = "1.64"
edition = "2021"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ImperialBower/pkcore.git"
homepage = "https://github.com/ImperialBower/pkcore"
exclude = [".github/workflows/*", "examples/*", ".gitignore", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
indexmap = { version = "2.0.0", features = ["rayon"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.19"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9.22"
sled = "0.34.7"
strum = { version = "0.25.0", features = ["derive"] }
zerocopy = "0.6.1"

[dev-dependencies]
clap = { version = "4.3.11", features = ["derive", "unicode"] }
elr_primes = "0.1.2"
env_logger = "0.10.0"
rstest = "0.18.1"
serde_test = "1.0.166"
#wincounter = "0.1.1"
